--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,19 +1,47 @@
 html, body {
     padding: 0;
     margin: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
 
     font-family: 'Poppins', 'sans-serif';
 
     background-color: #fff;
 }
 
+img { 
+    image-rendering: optimizeSpeed;             /*                     */
+    image-rendering: -moz-crisp-edges;          /* Firefox             */
+    image-rendering: -o-crisp-edges;            /* Opera               */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed       */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
+}
+
+a:link {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #e5ff88;
+}
+
+a:active {
+    text-decoration: none;
+    color: #e5ff88;
+}
+
 #header_bar {
-    width: 100%;
+    padding: 3em;
+    width: 100vw;
     margin: 0;
-    padding: 2em;
 
     background-color: #ffd188;
     
@@ -21,15 +49,38 @@ html, body {
     flex-direction: row;
     align-items: baseline;
     justify-content: space-between;
-    
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; 
 }
 
 #header_bar .link-row {
-    width: 50%;
+    width: 30%;
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+#header_bar > h1 > a:link {
+    text-decoration: none;
+    color: #a288ff;
+}
+
+#header_bar > h1 > a:visited {
+    text-decoration: none;
+    color: #a288ff;
+}
+
+#header_bar > h1 > a:hover {
+    text-decoration: none;
+    color: #a288ff;
+}
+
+#header_bar > h1 > a:active {
+    text-decoration: none;
+    color: #a288ff;e
 }
 
 .centerFloat {
@@ -38,7 +89,7 @@ html, body {
     width: 100%;
 
     font-size: 2em;
-
+    color: #ffd188;
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
